# back-prueba-rocas

./: .env.example  .gitignore  API_REFERENCE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  STYLE_GUIDE.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.ps1  seed_data.py
app/: __init__.py  main.py
app/application/: __init__.py  container.py  fast_api.py  handler.py  logging_config.py  settings.py
app/domain/: __init__.py
app/domain/gateway/: __init__.py  stock_data_gateway.py  user_data_gateway.py
app/domain/model/: __init__.py  pagination.py  stock.py  user.py
app/domain/model/util/: __init__.py  exceptions.py
app/domain/usecase/: __init__.py  auth_usecase.py  stock_usecase.py  user_usecase.py
app/domain/usecase/util/: __init__.py  jwt.py  security.py
app/infrastructure/: __init__.py
app/infrastructure/driven_adapter/: __init__.py
app/infrastructure/driven_adapter/persistence/: __init__.py
app/infrastructure/driven_adapter/stock_adapter/: __init__.py  stock_data_gateway_impl.py
app/infrastructure/driven_adapter/user_adapter/: __init__.py  user_data_gateway_impl.py
app/infrastructure/entry_point/: __init__.py
app/infrastructure/entry_point/controller/: __init__.py  auth_controller.py  stock_controller.py
app/infrastructure/entry_point/dto/: __init__.py  response_dto.py  stock_dto.py  user_dto.py
app/infrastructure/entry_point/handler/: __init__.py  auth_handler.py
tests/: conftest.py
tests/e2e/: __init__.py
tests/e2e/infrastructure/: __init__.py
tests/unit/domain/: __init__.py
(+22 files in other folders)
